hphp/hack/test/typecheck/pending_switch1.php.exp
File "pending_switch1.php", line 15, characters 10-11:
Variable $x is undefined, or not always defined (Naming[2050])
